# zero-node-wallet-circuit

./: Cargo.toml  README.md
contract/: Verifier.sol
output/: proof.json
pkg/: halo2-config.json  package.json  zero_node_wallet_circuit.d.ts  zero_node_wallet_circuit.js  zero_node_wallet_circuit_bg.wasm  zero_node_wallet_circuit_bg.wasm.d.ts
src/: lib.rs  main.rs  opts.rs
src/circuits/: wallet.rs
